--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "oshop": {
+    "harmony": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/oshop",
+            "outputPath": "dist/harmony",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -23,7 +23,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": []
           },
@@ -57,18 +57,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "oshop:build"
+            "browserTarget": "harmony:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "oshop:build:production"
+              "browserTarget": "harmony:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "oshop:build"
+            "browserTarget": "harmony:build"
           }
         },
         "test": {
@@ -105,15 +105,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "oshop:serve"
+            "devServerTarget": "harmony:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "oshop:serve:production"
+              "devServerTarget": "harmony:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "oshop"
+  "defaultProject": "harmony"
 }
