--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "oshop",
+  "name": "harmony",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,11 +7,13 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "deploy:firebase": "ng build --prod && firebase deploy"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.0.0",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "~8.0.0",
     "@angular/compiler": "~8.0.0",
     "@angular/core": "~8.0.0",
@@ -19,7 +21,16 @@
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
+    "@ng-bootstrap/ng-bootstrap": "~5.2.2",
+    "angular5-data-table": "^1.0.3",
+    "angular7-data-table": "^1.0.13",
+    "angularfire2": "^4.0.0-rc.1",
+    "bootstrap": "^4.4.1",
+    "firebase": "^4.2.0",
+    "font-awesome": "^4.7.0",
+    "ng2-validation": "^4.2.0",
     "rxjs": "~6.4.0",
+    "rxjs-compat": "^6.5.4",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
